transition to mobile view earlier to prevent overflow

--- a/data/css/index.css
+++ b/data/css/index.css
@@ -237,7 +237,7 @@ nav {
     display: none;
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 968px) {
 
     /* Removes padding */
     #main {
